Update to Spring Boot 2.6.1, Java 17, Spring Cloud 2021.0.0